tests/baselines/reference/functionOverloadErrorsSyntax.errors.txt
==== tests/cases/compiler/functionOverloadErrorsSyntax.ts (3 errors) ====
    //Function overload signature with optional parameter followed by non-optional parameter
    function fn4a(x?: number, y: string);
                              ~~~~~~~~~
!!! error TS1016: Required parameter cannot follow optional parameter.
    function fn4a() { }
    
    function fn4b(n: string, x?: number, y: string);
                                         ~~~~~~~~~
!!! error TS1016: Required parameter cannot follow optional parameter.
    function fn4b() { }
    
    //Function overload signature with rest param followed by non-optional parameter
    function fn5(x: string, ...y: any[], z: string);
                            ~~~~~~~~~~~
!!! error TS1014: Rest parameter must be last in list.
    function fn5() { }
    